--- a/.github/workflows/install-lint-test-on-ubuntu.yml
+++ b/.github/workflows/install-lint-test-on-ubuntu.yml
@@ -1,4 +1,4 @@
-name: Install Package, Lint Code & Run Tests
+name: Install Package, Lint Code & Run Tests on Ubuntu
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
       - "*"
 
 jobs:
-  install-lint-test:
+  install-lint-test-on-ubuntu:
     runs-on: ubuntu-latest
 
     strategy:
@@ -41,3 +41,4 @@ jobs:
         run: make test
         env:
           LEPTON_API_KEY: ${{ secrets.LEPTON_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
