--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openssa"
-version = "0.23.12.18"
+version = "0.23.12.19"
 
 authors = [
   "Aitomatic, Inc. <engineering@aitomatic.com>",
@@ -40,18 +40,20 @@ packages = [
 include = [
 ]
 exclude = [
-  "**/.openssa/"
+  "**/.openssa/",  # OpenSSA cache data
 ]
 
 
 [tool.poetry.group.docs.dependencies]
 sphinx = ">=7.2"
-sphinx-autobuild = ">=2021.3.14"
+sphinx-autobuild = ">=2021.3"
 sphinx-press-theme = ">=0.8"
 myst-parser = ">=2.0"
 
 [tool.poetry.group.lint.dependencies]
+flake8 = ">=6.1"
 pylint = ">=3.0"
+ruff = ">=0.1"
 pydocstyle = ">=6.3"
 
 [tool.poetry.group.test.dependencies]
@@ -59,25 +61,26 @@ pytest = ">=7.4"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-# OpenAI & related
-openai = ">=1.4"
+# OpenAI interface
+openai = ">=1.6"
 # LlamaIndex & related
-llama-index = ">=0.9.15"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
-llama-hub = ">=0.0.59"
+llama-index = ">=0.9.17"  # should keep up-to-date with Llama-Index's minor releases (often backward-incompatible)
+llama-hub = ">=0.0.60"
 docx2txt = ">=0.8"  # for reading .docx files
 pypdf = ">=3.17"  # for reading .pdf files
 pycryptodome = ">=3.19"  # for reading .pdf files: PyCryptodome is required for AES algorithm
 # file systems
-fsspec = ">=2023.12"  # base/local file system
-adlfs = ">=2023.10"  # Azure Data Lake
-gcsfs = ">=2023.12"  # Google Cloud Storage
-s3fs = ">=2023.12"  # S3
+fsspec = "~2023.10.0"  # base/local file system
+adlfs = "~2023.10.0"  # Azure Data Lake
+gcsfs = "~2023.10.0"  # Google Cloud Storage
+s3fs = "~2023.10.0"  # S3
 # misc / other
 click = ">=8.1"
 google-api-python-client = ">=2.111"
 httpx = ">=0.25"
 loguru = ">=0.7"
-pydantic = ">=2.5"
+# pydantic = ">=2.5"
+pydantic = "1.10.9"
 python-dotenv = ">=1.0"
 tomli = { version = ">=2.0", python = "<3.11" }
 
@@ -100,6 +103,25 @@ openssa = "openssa.utils.cli:openssa_cli"
 build-backend = "poetry.core.masonry.api"
 requires = [
   "poetry-core >= 1.8",
+]
+
+
+# pylint.readthedocs.io/en/latest/user_guide/usage/run.html
+# pylint.readthedocs.io/en/latest/user_guide/configuration/index.html
+[tool.pylint."messages control"]
+disable = [
+  "attribute-defined-outside-init",
+  "duplicate-code",
+  "fixme",
+  "import-error",
+  "line-too-long",
+  "missing-class-docstring",
+  "missing-function-docstring",
+  "missing-module-docstring",
+  "raw-checker-failed",
+  "redefined-outer-name",
+  "too-few-public-methods",
+  "unnecessary-pass",
 ]
 
 
