--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,7 @@
 
     "charliermarsh.ruff",  // Ruff
 
-    "garaioag.garaio-vscode-unwanted-recommendations"  // Unwanted Recommendations
+    "soulcode.vscode-unwanted-recommendations"  // Unwanted Recommendations
   ],
 
   "unwantedRecommendations": [
