--- a/.ruff.toml
+++ b/.ruff.toml
@@ -48,6 +48,7 @@ ignore = [
   "D107",  # missing docstring in `__init__`
   "D200",  # one-line docstring should fit on one line
   "D202",  # no blank lines allowed after function docstring
+  "D203",  # one blank line before class
   "D204",  # 1 blank line required after class docstring
   "D205",  # 1 blank line required between summary line and description
   "D212",  # multi-line docstring summary should start at the first line
@@ -66,10 +67,12 @@ ignore = [
   "EM102",  # exception must not use an f-string literal, assign to variable first
   "ERA001",  # found commented-out code
   "F401",  # imported but unused
+  "FA102",  # missing `from __future__ import annotations`, but uses PEP 604 union
   "FBT001",  # boolean-typed positional argument in function definition
   "FBT002",  # boolean default positional argument in function definition
   "FBT003",  # boolean positional value in function call
   "FIX002",  # line contains TODO, consider resolving the issue
+  "FURB101",  # `open` and `read` should be replaced by `Path(file_path).read_bytes()`
   "I001",  # import block is un-sorted or un-formatted
   "INP001",  # file is part of an implicit namespace package; add an `__init__.py`
   "LOG009",  # use of undocumented `logging.WARN` constant
@@ -106,11 +109,16 @@ ignore = [
   "RUF013",  # PEP 484 prohibits implicit `Optional`
   "RUF017",  # Avoid quadratic list summation"
   "RUF018",  # avoid assignment expressions in `assert` statements
+  "RUF022",  # __all__` is not sorted
+  "RUF100",  # unused `noqa` directive
   "S101",  # use of `assert` detected
   "S106",  # possible hardcoded password assigned to argument
+  "S110",  # `try`-`except`-`pass` detected, consider logging the exception
   "S605",  # starting a process with a shell, possible injection detected
+  "S607",  # starting a process with a partial executable path
   "SIM102",  # use a single `if` statement instead of nested `if` statements
   "SIM108",  # use ternary operator `temp = temp["content"] if isinstance(temp, dict) else temp.content` instead of `if`-`else`-block
+  "SIM105",  # use `contextlib.suppress(Exception)` instead of `try`-`except`-`pass`
   "SIM112",  # use capitalized environment variable
   "SIM401",  # use `item.get("role", "assistant")` instead of an `if` block
   "SLF001",  # private member accessed
@@ -123,5 +131,4 @@ ignore = [
   "UP007",  # use `X | Y` for type annotations
   "UP035",  # `typing.[X]` is deprecated, use `[x]` instead
   "UP039",  # unnecessary parentheses after class definition
-  "D203",   # one-blank-line-before-class
 ]
