--- a/examples/financebench/Makefile
+++ b/examples/financebench/Makefile
@@ -2,4 +2,4 @@ run-streamlit:
 	@streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
 
 solve:
-	@poetry run python3 ssa_fb/prob_solve.py ${id}
+	@poetry run python3 fb_ssa/prob_solve.py ${id}
