--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ httpx = ">=0.27"
 loguru = ">=0.7"
 pydantic = "1.10.9"
 python-dotenv = ">=1.0"
+tqdm = ">=4.66"
 tomli = { version = ">=2.0", python = "<3.11" }
 
 # optional dependencies required by extras
