update VSCode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,8 @@
 
   "python.analysis.diagnosticSeverityOverrides": {
     "reportInvalidTypeForm": "none",
-    "reportMissingImports": "none"
+    "reportMissingImports": "none",
+    "reportMissingModuleSource": "none"
   },
 
 
