--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -1,5 +1,8 @@
 run-streamlit:
 	@streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
 
+rag-default-answer:
+	@poetry run python3 rag.py ${id}
+
 solve:
 	@poetry run python3 fb_ssa/prob_solve.py ${id}
