--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -2,7 +2,4 @@ run-streamlit:
 	@streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
 
 rag-default-answer:
-	@poetry run python3 rag.py ${id}
-
-solve:
-	@poetry run python3 fb_ssa/prob_solve.py ${id}
+	@poetry run python rag.py ${id}
