--- a/examples/FinanceBench/.env.template
+++ b/examples/FinanceBench/.env.template
@@ -1,2 +1,5 @@
 LEPTON_API_KEY=[... Lepton key (obtainable at dashboard.lepton.ai) if running SSAs on Aitomatic services ...]
 OPENAI_API_KEY=[... OpenAI creds if running SSAs directly on OpenAI services ...]
+
+AITO_HOST=[... Aitomatic host URL if running SSAs directly on Aitomatic services ...]
+AITO_KEY=[... Aitomatic key if running SSAs directly on Aitomatic services ...]
