update examples/FinanceBench environment variables templates

--- a/examples/FinanceBench/.streamlit/secrets.toml.template
+++ b/examples/FinanceBench/.streamlit/secrets.toml.template
@@ -1,1 +1,2 @@
-LEPTON_API_KEY = '...'
+AITO_HOST = '[... Aitomatic host URL if running SSAs directly on Aitomatic services ...]'
+AITO_KEY = '[... Aitomatic key if running SSAs directly on Aitomatic services ...]'
