rename examples/FinanceBench/rag_finetuned_embed_only module

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -1,8 +1,14 @@
 rag-default-answer:
 	@poetry run python rag_default.py ${id}
 
-rag-finetuned-answer:
-	@poetry run python rag_finetuned.py ${id}
+rag-finetuned-embed-answer:
+	@poetry run python rag_finetuned_embed_only.py ${id}
+
+rag-finetuned-lm-answer:
+	@poetry run python rag_finetuned_lm_only.py ${id}
+
+rag-finetuned-both-answer:
+	@poetry run python rag_finetuned_embed_and_lm.py ${id}
 
 ooda-solve:
 	@poetry run python ooda.py ${id}
