--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -13,5 +13,8 @@ rag-finetuned-both-answer:
 ooda-solve:
 	@poetry run python ooda.py ${id}
 
+ssm-discuss:
+	@poetry run python ssm.py ${id}
+
 streamlit-run:
 	@poetry run streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
