--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ myst-parser = ">=2.0"
 [tool.poetry.group.lint.dependencies]
 flake8 = ">=7.0"
 pylint = ">=3.1"
-ruff = ">=0.3"
+ruff = ">=0.3,!=0.3.5"
 
 [tool.poetry.group.test.dependencies]
 pytest = ">=8.1"
