--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,7 +81,7 @@ s3fs = ">=2024.2"  # S3
 # misc / other
 click = ">=8.1"
 google-api-python-client = ">=2.124"
-httpx = ">=0.27"
+httpx = ">=0.25"  # TODO: consider range
 loguru = ">=0.7"
 pydantic = ">=2.6"
 python-dotenv = ">=1.0"
